--- a/post.html
+++ b/post.html
@@ -8,13 +8,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nome (@nome-vistagram)</title>
+  <title>Mateus VS Matias (@mateusvsmatias)</title>
 </head>
 
 <body>
   <div class="back-box">
     <div class="back">
-      <a href="profile.html"><img src="img/back.png" alt="back button" class="back-button"></a>
+      <a href="mateusvsmatias.html"><img src="img/back.png" alt="back button" class="back-button"></a>
     </div>
     <div class="back-pub">
       <h3 class="pub">Publicações</h3>
@@ -25,10 +25,10 @@
 
     <div class="top">
       <div class="profile-img">
-        <img src="img/profile-pic.png" class="profile-pic" alt="">
+        <img src="img/fotoperfilmateusvsmatias.png" class="profile-pic" alt="">
       </div>
       <div class="profile-name">
-        <a href="profile.html"><h1>Profile_Name <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
+        <a href="mateusvsmatias.html"><h1>mateusvsmatias <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
         <h2>Porto, Portugal</h2>
       </div>
       <div class="options">
@@ -37,12 +37,12 @@
     </div>
 
     <div class="img-box">
-      <img src="img/bg.jpg" class="img" alt="">
+      <iframe src="https://www.youtube.com/embed/xG65iUIV_Fs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div class="action-buttons">
       <div class="a-button">
-        <img src="img/heart.png" class="heart" onclick="likeButton()" alt="">
+        <img src="img/heart.png" class="heart" alt="">
       </div>
       <div class="a-button">
         <img src="img/comment.png" class="button" alt="">
@@ -56,14 +56,14 @@
     </div>
 
     <div class="like-comment">
-      <h1 class="likes">3647 gostos</h1>
-      <p><em>Profile_Name</em> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut convallis ornare ante, eu vulputate justo <span>#hashtag1</span> <span>#hashtag2</span></p>
+      <h1 class="likes">4061 gostos</h1>
+      <p><em>mateusvsmatias</em> PRANK: FINGI QUE ERA O MEU IRMÃO (CONVENCI A JESS?)</p>
       <div class="comments">
-        <p><em>nome.influencer</em> Ut convallis ornare ante
-        <br><em>nome.fan</em> eu vulputate justo</p>
+        <p><em>100_emoji</em> Mais um clássico, adorei 💯
+        <br><em>good_soup</em> muito bom 👌🏼</p>
       </div>
-      <h4>mais 209 comentários</h4>
-      <h4 class="time">29 de dezembro</h4>
+      <h4>mais 355 comentários</h4>
+      <h4 class="time">há 3 dias</h4>
     </div>
 
   </div>
@@ -72,10 +72,10 @@
 
     <div class="top">
       <div class="profile-img">
-        <img src="img/profile-pic.png" class="profile-pic" alt="">
+        <img src="img/fotoperfilmateusvsmatias.png" class="profile-pic" alt="">
       </div>
       <div class="profile-name">
-        <a href="profile.html"><h1>Profile_Name <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
+        <a href="mateusvsmatias.html"><h1>mateusvsmatias <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
         <h2>Porto, Portugal</h2>
       </div>
       <div class="options">
@@ -84,12 +84,12 @@
     </div>
 
     <div class="img-box">
-      <img src="img/bg.jpg" class="img" alt="">
+      <img src="img/mateusvsmatias8.jpg" class="img" alt="">
     </div>
 
     <div class="action-buttons">
       <div class="a-button">
-        <img src="img/heart.png" class="heart" onclick="likeButton()" alt="">
+        <img src="img/heart.png" class="heart" alt="">
       </div>
       <div class="a-button">
         <img src="img/comment.png" class="button" alt="">
@@ -103,31 +103,345 @@
     </div>
 
     <div class="like-comment">
-      <h1 class="likes">3647 gostos</h1>
-      <p><em>Profile_Name</em> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut convallis ornare ante, eu vulputate justo <span>#hashtag1</span> <span>#hashtag2</span></p>
+      <h1 class="likes">3012 gostos</h1>
+      <p><em>mateusvsmatias</em> Novo vídeo daqui a pouco na página 💯</p>
       <div class="comments">
-        <p><em>nome.influencer</em> Ut convallis ornare ante
-        <br><em>nome.fan</em> eu vulputate justo</p>
+        <p><em>loyalfan96</em> Senti a tua falta!! <span>#teammateus</span>
+        <br><em>actualfire</em> finalmente um novo vídeo 🔥🔥</p>
       </div>
-      <h4>mais 209 comentários</h4>
-      <h4 class="time">29 de dezembro</h4>
+      <h4>mais 212 comentários</h4>
+      <h4 class="time">há 3 dias</h4>
     </div>
+  </div>
+
+    <div class="card" id="7">
+
+      <div class="top">
+        <div class="profile-img">
+          <img src="img/fotoperfilmateusvsmatias.png" class="profile-pic" alt="">
+        </div>
+        <div class="profile-name">
+          <a href="mateusvsmatias.html"><h1>mateusvsmatias <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
+          <h2>Porto, Portugal</h2>
+        </div>
+        <div class="options">
+          <img src="img/dot.png" class="options-img" alt="">
+        </div>
+      </div>
+
+      <div class="img-box">
+        <iframe src="https://www.youtube.com/embed/h4v_OZVMOpI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+
+      <div class="action-buttons">
+        <div class="a-button">
+          <img src="img/heart.png" class="heart" alt="">
+        </div>
+        <div class="a-button">
+          <img src="img/comment.png" class="button" alt="">
+        </div>
+        <div class="a-button-space">
+          <img src="img/share.png" class="button" alt="">
+        </div>
+        <div class="a-button-book">
+          <img src="img/bookmark.png" class="button" alt="">
+        </div>
+      </div>
+
+      <div class="like-comment">
+        <h1 class="likes">5052 gostos</h1>
+        <p><em>mateusvsmatias</em> PRANK: LIGO À NAMORADA DO MEU IRMÃO PARA ACABAR COM ELA *CORREU MAL*</p>
+        <div class="comments">
+          <p><em>fakefriend5</em> Isto tem de ser fake, omg que mau 😬😬
+          <br><em>giantllama</em> Não acredito nisto, que prank 💯😱</p>
+        </div>
+        <h4>mais 519 comentários</h4>
+        <h4 class="time">há 10 dias</h4>
+      </div>
 
   </div>
 
-    <script>
-      function likeButton() {
-        let heart = document.querySelector('.heart');
-        let likes = document.querySelector('.likes');
-        if (heart.src.match("img/heart.png")) {
-          heart.src = "img/heart_red.png";
-          likes.innerHTML = "3648 gostos";
-        } else {
-          heart.src = "img/heart.png";
-          likes.innerHTML = "3647 gostos"
-        }
-      }
-    </script>
+  <div class="card" id="6">
+
+    <div class="top">
+      <div class="profile-img">
+        <img src="img/fotoperfilmateusvsmatias.png" class="profile-pic" alt="">
+      </div>
+      <div class="profile-name">
+        <a href="mateusvsmatias.html"><h1>mateusvsmatias <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
+        <h2>Porto, Portugal</h2>
+      </div>
+      <div class="options">
+        <img src="img/dot.png" class="options-img" alt="">
+      </div>
+    </div>
+
+    <div class="img-box">
+      <img src="img/mateusvsmatias6.jpg" class="img" alt="">
+    </div>
+
+    <div class="action-buttons">
+      <div class="a-button">
+        <img src="img/heart.png" class="heart" alt="">
+      </div>
+      <div class="a-button">
+        <img src="img/comment.png" class="button" alt="">
+      </div>
+      <div class="a-button-space">
+        <img src="img/share.png" class="button" alt="">
+      </div>
+      <div class="a-button-book">
+        <img src="img/bookmark.png" class="button" alt="">
+      </div>
+    </div>
+
+    <div class="like-comment">
+      <h1 class="likes">3008 gostos</h1>
+      <p><em>mateusvsmatias</em> Novo vídeo sai hoje, e este é intenso 😬🔥</p>
+      <div class="comments">
+        <p><em>shock_face_emoji</em> 😱😱😱😱😱😱
+        <br><em>bananapantz</em> Omg não acredito</p>
+      </div>
+      <h4>mais 208 comentários</h4>
+      <h4 class="time">há 10 dias</h4>
+    </div>
+
+</div>
+
+<div class="card" id="5">
+
+  <div class="top">
+    <div class="profile-img">
+      <img src="img/fotoperfilmateusvsmatias.png" class="profile-pic" alt="">
+    </div>
+    <div class="profile-name">
+      <a href="mateusvsmatias.html"><h1>mateusvsmatias <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
+      <h2>Porto, Portugal</h2>
+    </div>
+    <div class="options">
+      <img src="img/dot.png" class="options-img" alt="">
+    </div>
+  </div>
+
+  <div class="img-box">
+    <img src="img/mateusvsmatias5.jpg" class="img" alt="">
+  </div>
+
+  <div class="action-buttons">
+    <div class="a-button">
+      <img src="img/heart.png" class="heart" alt="">
+    </div>
+    <div class="a-button">
+      <img src="img/comment.png" class="button" alt="">
+    </div>
+    <div class="a-button-space">
+      <img src="img/share.png" class="button" alt="">
+    </div>
+    <div class="a-button-book">
+      <img src="img/bookmark.png" class="button" alt="">
+    </div>
+  </div>
+
+  <div class="like-comment">
+    <h1 class="likes">3990 gostos</h1>
+    <p><em>mateusvsmatias</em> Os melhores amigos juntos! @jess_plays <span>#teammatias</span></p>
+    <div class="comments">
+      <p><em>butterbi</em> A Jess devia aparecer no canal!!
+      <br><em>wholesome.bean</em> <span>#teammatias</span> 💗</p>
+    </div>
+    <h4>mais 289 comentários</h4>
+    <h4 class="time">há 13 dias</h4>
+  </div>
+
+</div>
+
+<div class="card" id="4">
+
+  <div class="top">
+    <div class="profile-img">
+      <img src="img/fotoperfilmateusvsmatias.png" class="profile-pic" alt="">
+    </div>
+    <div class="profile-name">
+      <a href="mateusvsmatias.html"><h1>mateusvsmatias <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
+      <h2>Porto, Portugal</h2>
+    </div>
+    <div class="options">
+      <img src="img/dot.png" class="options-img" alt="">
+    </div>
+  </div>
+
+  <div class="img-box">
+    <img src="img/mateusvsmatias4.jpg" class="img" alt="">
+  </div>
+
+  <div class="action-buttons">
+    <div class="a-button">
+      <img src="img/heart.png" class="heart" alt="">
+    </div>
+    <div class="a-button">
+      <img src="img/comment.png" class="button" alt="">
+    </div>
+    <div class="a-button-space">
+      <img src="img/share.png" class="button" alt="">
+    </div>
+    <div class="a-button-book">
+      <img src="img/bookmark.png" class="button" alt="">
+    </div>
+  </div>
+
+  <div class="like-comment">
+    <h1 class="likes">4044 gostos</h1>
+    <p><em>mateusvsmatias</em> Temos a certeza que a @aanaébela é <span>#teammateus</span> 💛</p>
+    <div class="comments">
+      <p><em>shippingfee</em> shippo muito 🥺
+      <br><em>penn1e</em> São os mais lindos 😍</p>
+    </div>
+    <h4>mais 304 comentários</h4>
+    <h4 class="time">há 18 dias</h4>
+  </div>
+
+</div>
+
+<div class="card" id="3">
+
+  <div class="top">
+    <div class="profile-img">
+      <img src="img/fotoperfilmateusvsmatias.png" class="profile-pic" alt="">
+    </div>
+    <div class="profile-name">
+      <a href="mateusvsmatias.html"><h1>mateusvsmatias <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
+      <h2>Porto, Portugal</h2>
+    </div>
+    <div class="options">
+      <img src="img/dot.png" class="options-img" alt="">
+    </div>
+  </div>
+
+  <div class="img-box">
+    <img src="img/mateusvsmatias3.jpg" class="img" alt="">
+  </div>
+
+  <div class="action-buttons">
+    <div class="a-button">
+      <img src="img/heart.png" class="heart" alt="">
+    </div>
+    <div class="a-button">
+      <img src="img/comment.png" class="button" alt="">
+    </div>
+    <div class="a-button-space">
+      <img src="img/share.png" class="button" alt="">
+    </div>
+    <div class="a-button-book">
+      <img src="img/bookmark.png" class="button" alt="">
+    </div>
+  </div>
+
+  <div class="like-comment">
+    <h1 class="likes">4559 gostos</h1>
+    <p><em>mateusvsmatias</em> Nova foto da página! 💯</p>
+    <div class="comments">
+      <p><em>probsimping</em> Muito lindos 😍
+      <br><em>100_emoji</em> 💯🔥</p>
+    </div>
+    <h4>mais 395 comentários</h4>
+    <h4 class="time">há 26 dias</h4>
+  </div>
+
+</div>
+
+<div class="card" id="2">
+
+  <div class="top">
+    <div class="profile-img">
+      <img src="img/fotoperfilmateusvsmatias.png" class="profile-pic" alt="">
+    </div>
+    <div class="profile-name">
+      <a href="mateusvsmatias.html"><h1>mateusvsmatias <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
+      <h2>Porto, Portugal</h2>
+    </div>
+    <div class="options">
+      <img src="img/dot.png" class="options-img" alt="">
+    </div>
+  </div>
+
+  <div class="img-box">
+    <iframe src="https://www.youtube.com/embed/rgqSO13i0no" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+  <div class="action-buttons">
+    <div class="a-button">
+      <img src="img/heart.png" class="heart" alt="">
+    </div>
+    <div class="a-button">
+      <img src="img/comment.png" class="button" alt="">
+    </div>
+    <div class="a-button-space">
+      <img src="img/share.png" class="button" alt="">
+    </div>
+    <div class="a-button-book">
+      <img src="img/bookmark.png" class="button" alt="">
+    </div>
+  </div>
+
+  <div class="like-comment">
+    <h1 class="likes">4669 gostos</h1>
+    <p><em>mateusvsmatias</em> DESAFIO: 25H FECHADO NA CASA DE BANHO?!</p>
+    <div class="comments">
+      <p><em>actualfire</em> Épico! 🔥 <span>#teammateus</span>
+      <br><em>bananapantz</em> O Matias apanhou-te bem 😂</p>
+    </div>
+    <h4>mais 369 comentários</h4>
+    <h4 class="time">há 1 mês</h4>
+  </div>
+
+</div>
+
+<div class="card" id="1">
+
+  <div class="top">
+    <div class="profile-img">
+      <img src="img/fotoperfilmateusvsmatias.png" class="profile-pic" alt="">
+    </div>
+    <div class="profile-name">
+      <a href="mateusvsmatias.html"><h1>mateusvsmatias <img src="img/checkmark.png" alt="verification badge" class="checkmark"></h1></a>
+      <h2>Porto, Portugal</h2>
+    </div>
+    <div class="options">
+      <img src="img/dot.png" class="options-img" alt="">
+    </div>
+  </div>
+
+  <div class="img-box">
+    <img src="img/mateusvsmatias1.jpg" class="img" alt="">
+  </div>
+
+  <div class="action-buttons">
+    <div class="a-button">
+      <img src="img/heart.png" class="heart" alt="">
+    </div>
+    <div class="a-button">
+      <img src="img/comment.png" class="button" alt="">
+    </div>
+    <div class="a-button-space">
+      <img src="img/share.png" class="button" alt="">
+    </div>
+    <div class="a-button-book">
+      <img src="img/bookmark.png" class="button" alt="">
+    </div>
+  </div>
+
+  <div class="like-comment">
+    <h1 class="likes">3499 gostos</h1>
+    <p><em>mateusvsmatias</em> Novo vídeo sai hoje 👀🔥</p>
+    <div class="comments">
+      <p><em>hahagobrrr</em> vamos lááá!
+      <br><em>randomdude44</em> Sim!! Mal posso esperar 😝</p>
+    </div>
+    <h4>mais 249 comentários</h4>
+    <h4 class="time">há 1 mês</h4>
+  </div>
+
+</div>
 
 </body>
 
